Java 17 version by @GavinRay97